--- a/KingfoodIO/wwwroot/html/refunded_msg.html
+++ b/KingfoodIO/wwwroot/html/refunded_msg.html
@@ -165,8 +165,7 @@
                                                                         style="font-size: 12px; font-family: Oswald, Arial, Helvetica Neue, Helvetica, sans-serif; mso-line-height-alt: 14.399999999999999px; color: #3fb9bc; line-height: 1.2;">
                                                                         <p
                                                                             style="margin: 0; font-size: 14px; text-align: center; mso-line-height-alt: 16.8px;">
-                                                                            <span style="font-size:50px;"><strong>System
-                                                                                    Message!</strong></span></p>
+                                                                            <span style="font-size:50px;"><strong>Successful refund!</strong></span></p>
                                                                     </div>
                                                                 </div>
                                                             </td>
@@ -234,9 +233,9 @@
                                                         <tr>
                                                             <td class="pad">
                                                                 <h1
-                                                                    style="margin: 0; color: #3fb9bc; direction: ltr; font-family: Oswald, Arial, Helvetica Neue, Helvetica, sans-serif; font-size: 38px; font-weight: 700; letter-spacing: normal; line-height: 120%; text-align: left; margin-top: 0; margin-bottom: 0;">
+                                                                    style="margin: 0; color: #3fb9bc; direction: ltr; font-family: Oswald, Arial, Helvetica Neue, Helvetica, sans-serif; font-size: 22px; font-weight: 700; letter-spacing: normal; line-height: 120%; text-align: left; margin-top: 0; margin-bottom: 0;">
                                                                     <span
-                                                                        class="tinyMce-placeholder">一个新的事件产生，请及时处理。</span>
+                                                                        class="tinyMce-placeholder">Your amounts will be returned to your payment methods within 5-7 business days.</span>
                                                                 </h1>
                                                             </td>
                                                         </tr>
@@ -249,32 +248,14 @@
                                                                 <div
                                                                     style="color:#101112;direction:ltr;font-family:Oswald, Arial, Helvetica Neue, Helvetica, sans-serif;font-size:16px;font-weight:400;letter-spacing:0px;line-height:120%;text-align:left;mso-line-height-alt:19.2px;">
                                                                     <p style="margin: 0; margin-bottom: 16px;">
-                                                                        单号：@Model.Ref&nbsp;</p>
+                                                                        Ticket No：@Model.booking.Ref&nbsp;</p> 
+                                                                        <p style="margin: 0; margin-bottom: 16px;">
+                                                                            Amount：@Model.amount&nbsp;</p>
                                                                     <p style="margin: 0; margin-bottom: 16px;">
-                                                                        名称：@Model.Tour.TourInfo.NameCn&nbsp;</p>
+                                                                        Tour Name：@Model.booking.Tour.TourInfo.NameEn&nbsp;</p>
                                                                     <p style="margin: 0; margin-bottom: 16px;">
-                                                                        用户：@Model.Name&nbsp;</p>
-                                                                    <p style="margin: 0;">时间：@Model.Created&nbsp;</p>
-                                                                </div>
-                                                            </td>
-                                                        </tr>
-                                                    </table>
-                                                    <table class="button_block block-3" width="100%" border="0"
-                                                        cellpadding="10" cellspacing="0" role="presentation"
-                                                        style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
-                                                        <tr>
-                                                            <td class="pad">
-                                                                <div class="alignment" align="center">
-                                                                    <!--[if mso]><v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" style="height:42px;width:52px;v-text-anchor:middle;" arcsize="10%" stroke="false" fillcolor="#8a3c90"><w:anchorlock/><v:textbox inset="0px,0px,0px,0px"><center style="color:#ffffff; font-family:Arial, sans-serif; font-size:16px"><![endif]-->
-                                                                    <div
-                                                                        style="text-decoration:none;display:inline-block;color:#ffffff;background-color:#3fb9bc; border-radius:4px;width:auto;border-top:0px solid transparent;font-weight:400;border-right:0px solid transparent;border-bottom:0px solid transparent;border-left:0px solid transparent;padding-top:5px;padding-bottom:5px;font-family:Oswald, Arial, Helvetica Neue, Helvetica, sans-serif;font-size:16px;text-align:center;mso-border-alt:none;word-break:keep-all;">
-                                                                     <a href="http://127.0.0.1:2712/ordersAdmin?ref=@Model.Ref" style="color:white">   <span
-                                                                            style="padding-left:20px;padding-right:20px;font-size:16px;display:inline-block;letter-spacing:normal;"><span
-                                                                                dir="ltr"
-                                                                                style="word-break: break-word; line-height: 32px;">去查看</span></span>
-                                                                            </a>
-                                                                    </div>
-                                                                    <!--[if mso]></center></v:textbox></v:roundrect><![endif]-->
+                                                                        User Name：@Model.booking.Name&nbsp;</p>
+                                                                    <p style="margin: 0;">Time: @Model.booking.Created&nbsp;</p>
                                                                 </div>
                                                             </td>
                                                         </tr>
