--- a/KingfoodIO/wwwroot/html/new_meals_decline.html
+++ b/KingfoodIO/wwwroot/html/new_meals_decline.html
@@ -133,8 +133,8 @@
 															<td class="pad" style="padding-bottom:5px;padding-left:20px;padding-right:10px;">
 																<div style="font-family: sans-serif">
 																	<div class style="font-size: 12px; font-family: Oswald, Arial, Helvetica Neue, Helvetica, sans-serif; mso-line-height-alt: 14.399999999999999px; color: #3fb9bc; line-height: 1.2;">
-																		<p style="margin: 0; font-size: 14px; text-align: center; mso-line-height-alt: 16.8px;"><span style="font-size:30px;"><strong>Order submission is successful, we will respond to your order within 24 hours of update!</strong></span></p>
-																		<p style="margin: 0; font-size: 14px; text-align: center; mso-line-height-alt: 16.8px;"><span style="font-size:30px;"><strong>订单提交成功，我们将在24小时内回复您订单的后续情况!</strong></span></p>
+																		<p style="margin: 0; font-size: 14px; text-align: center; mso-line-height-alt: 16.8px;"><span style="font-size:25px;"><strong>The restaurant has rejected your order, please click the button below to view more suitable restaurants!</strong></span></p>
+																		<p style="margin: 0; font-size: 14px; text-align: center; mso-line-height-alt: 16.8px;"><span style="font-size:30px;"><strong>餐厅已拒绝了你的订单，请点击下方按钮查看更多合适的餐厅，本次订单支付的费用将会原支付方式退回。</strong></span></p>
 																	</div>
 																</div>
 															</td>
