--- a/KingfoodIO/wwwroot/html/reset_password.html
+++ b/KingfoodIO/wwwroot/html/reset_password.html
@@ -165,10 +165,10 @@
                                                                         style="font-size: 12px; font-family: Oswald, Arial, Helvetica Neue, Helvetica, sans-serif; mso-line-height-alt: 14.399999999999999px; color: #3fb9bc; line-height: 1.2;">
                                                                         <p
                                                                             style="margin: 0; font-size: 14px; text-align: center; mso-line-height-alt: 16.8px;">
-                                                                            <span style="font-size:50px;"><strong>Verify Your Email Address</strong></span></p>   
+                                                                            <span style="font-size:50px;"><strong>Forget Password</strong></span></p>   
                                                                             <p
                                                                             style="margin: 0; font-size: 10px; text-align: center; mso-line-height-alt: 10.8px;">
-                                                                            <span style="font-size:30px;"><strong>验证你的邮箱地址</strong></span></p>
+                                                                            <span style="font-size:30px;"><strong>忘记密码</strong></span></p>
                                                                     </div>
                                                                 </div>
                                                             </td>
@@ -236,17 +236,17 @@
                                                         <tr>
                                                             <td class="pad">
                                                                 <h1
-                                                                    style="margin: 0; color: #3fb9bc; direction: ltr; font-family: Oswald, Arial, Helvetica Neue, Helvetica, sans-serif; font-size: 28px; font-weight: 700; letter-spacing: normal; line-height: 120%; text-align: left; margin-top: 0; margin-bottom: 0;">
+                                                                    style="margin: 0; color: #3fb9bc; direction: ltr; font-family: Oswald, Arial, Helvetica Neue, Helvetica, sans-serif; font-size: 28px; font-weight: 700; letter-spacing: normal; line-height: 120%; text-align: center; margin-top: 0; margin-bottom: 0; ">
                                                                     <span
-                                                                        class="tinyMce-placeholder">To continue using GroupMeals, please verify your email address:</span> 
+                                                                        class="tinyMce-placeholder">Go to our website to reset your password</span> 
                                                             </td>
                                                         </tr>
                                                         <tr>
                                                             <td class="pad">
                                                                 <h1
-                                                                    style="margin: 0; color: #3fb9bc; direction: ltr; font-family: Oswald, Arial, Helvetica Neue, Helvetica, sans-serif; font-size: 26px; font-weight: 700; letter-spacing: normal; line-height: 120%; text-align: left; margin-top: 0; margin-bottom: 0;">
+                                                                    style="margin: 0; color: #3fb9bc; direction: ltr; font-family: Oswald, Arial, Helvetica Neue, Helvetica, sans-serif; font-size: 26px; font-weight: 700; letter-spacing: normal; line-height: 120%; text-align: center; margin-top: 0; margin-bottom: 0;">
                                                                         <span
-                                                                        class="tinyMce-placeholder">为了继续使用GroupMeals，请验证你正在使用的邮箱地址:</span>
+                                                                        class="tinyMce-placeholder">点击设置新的密码:</span>
                                                                 </h1>
                                                             </td>
                                                         </tr>
@@ -258,10 +258,7 @@
                                                         <td class="pad">
                                                             <div class="alignment" align="center">
                                                                 <!--[if mso]><v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" style="height:42px;width:52px;v-text-anchor:middle;" arcsize="10%" stroke="false" fillcolor="#8a3c90"><w:anchorlock/><v:textbox inset="0px,0px,0px,0px"><center style="color:#ffffff; font-family:Arial, sans-serif; font-size:16px"><![endif]-->
-                                                                <div
-                                                                    style="text-decoration:none;display:inline-block;color:#000;border-radius:4px;width:auto;border-top:0px solid transparent;font-weight:400;border-right:0px solid transparent;border-bottom:0px solid transparent;border-left:0px solid transparent;padding-top:5px;padding-bottom:5px;font-family:Oswald, Arial, Helvetica Neue, Helvetica, sans-serif;font-size:36px;text-align:center;mso-border-alt:none;word-break:keep-all;">
-                                                                    @Model.Email
-                                                                </div>
+                                                            
                                                                 <!--[if mso]></center></v:textbox></v:roundrect><![endif]-->
                                                             </div>
                                                         </td>
@@ -276,10 +273,10 @@
                                                                     <!--[if mso]><v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" style="height:42px;width:52px;v-text-anchor:middle;" arcsize="10%" stroke="false" fillcolor="#8a3c90"><w:anchorlock/><v:textbox inset="0px,0px,0px,0px"><center style="color:#ffffff; font-family:Arial, sans-serif; font-size:16px"><![endif]-->
                                                                     <div
                                                                         style="text-decoration:none;display:inline-block;color:#ffffff;background-color:#3fb9bc; border-radius:4px;width:auto;border-top:0px solid transparent;font-weight:400;border-right:0px solid transparent;border-bottom:0px solid transparent;border-left:0px solid transparent;padding-top:5px;padding-bottom:5px;font-family:Oswald, Arial, Helvetica Neue, Helvetica, sans-serif;font-size:16px;text-align:center;mso-border-alt:none;word-break:keep-all;">
-                                                                     <a href="http://groupmeals.com/emailverify?email=@Model.Email&id=@Model.Id" style="color:white">   <span
+                                                                     <a href="http://groupmeals.com/forgetpassword?email=@Model.Email&id=@Model.Id" style="color:white">   <span
                                                                             style="padding-left:20px;padding-right:20px;font-size:16px;display:inline-block;letter-spacing:normal;"><span
                                                                                 dir="ltr"
-                                                                                style="word-break: break-word; line-height: 32px;">Confirm(确认)</span></span>
+                                                                                style="word-break: break-word; line-height: 32px;">Reset(重置密码)</span></span>
                                                                             </a>
                                                                     </div>
                                                                     <!--[if mso]></center></v:textbox></v:roundrect><![endif]-->
