--- a/KingfoodIO/wwwroot/html/new_meals_restaurant.html
+++ b/KingfoodIO/wwwroot/html/new_meals_restaurant.html
@@ -551,7 +551,7 @@
 																		style="text-decoration:none;display:inline-block;color:#ffffff;background-color:#3fb9bc;border-radius:4px;width:auto;border-top:0px solid transparent;font-weight:400;border-right:0px solid transparent;border-bottom:0px solid transparent;border-left:0px solid transparent;padding-top:5px;padding-bottom:5px;font-family:Oswald, Arial, Helvetica Neue, Helvetica, sans-serif;font-size:16px;text-align:center;mso-border-alt:none;word-break:keep-all;">
 																		<span
 																			style="padding-left:20px;padding-right:20px;font-size:16px;display:inline-block;letter-spacing:normal;"><a
-																			href="https://groupmeals.com/AcceptOrder/@Model.booking.Id?opt=1" target="_blank" style="word-break: break-word; text-decoration:none;color:#fefefe; line-height: 32px;"> Accept
+																			href="https://order.groupmeals.com/AcceptOrder/@Model.booking.Id?opt=1" target="_blank" style="word-break: break-word; text-decoration:none;color:#fefefe; line-height: 32px;"> Accept
 																				接收</a></span></div>
 																	<!--[if mso]></center></v:textbox></v:roundrect><![endif]-->
 																</div>
@@ -570,7 +570,7 @@
 																		style="text-decoration:none;display:inline-block;color:#ffffff;background-color:#bc3f3f;border-radius:4px;width:auto;border-top:0px solid transparent;font-weight:400;border-right:0px solid transparent;border-bottom:0px solid transparent;border-left:0px solid transparent;padding-top:5px;padding-bottom:5px;font-family:Oswald, Arial, Helvetica Neue, Helvetica, sans-serif;font-size:16px;text-align:center;mso-border-alt:none;word-break:keep-all;">
 																		<span
 																			style="padding-left:20px;padding-right:20px;font-size:16px;display:inline-block;letter-spacing:normal;"><a
-																			href="https://groupmeals.com/AcceptOrder/@Model.booking.Id?opt=2" target="_blank" style="word-break: break-word; text-decoration:none;color:#fefefe; line-height: 32px;">Decline
+																			href="https://order.groupmeals.com/AcceptOrder/@Model.booking.Id?opt=2" target="_blank" style="word-break: break-word; text-decoration:none;color:#fefefe; line-height: 32px;">Decline
 																				拒绝</a></span></div>
 																	<!--[if mso]></center></v:textbox></v:roundrect><![endif]-->
 																</div>
