feat: new status

--- a/KingfoodIO/wwwroot/html/new_meals_restaurant.html
+++ b/KingfoodIO/wwwroot/html/new_meals_restaurant.html
@@ -336,6 +336,9 @@
 																<div style="font-family: Arial, sans-serif">
 																	<div class style="font-size: 12px; font-family: 'Oswald', Arial, 'Helvetica Neue', Helvetica, sans-serif; mso-line-height-alt: 18px; color: #3a4848; line-height: 1.5;">
 																		<p style="margin: 0; font-size: 14px; text-align: left; mso-line-height-alt: 24px;">
+																			<span style="font-size:16px;">@Model.bookingDetail.GroupRef</span>
+																		</p>
+																		<p style="margin: 0; font-size: 14px; text-align: left; mso-line-height-alt: 24px;">
 																			<span style="font-size:16px;">@Model.booking.CustomerName @Model.booking.CustomerPhone</span>
 																		</p>
 																		<p style="margin: 0; font-size: 14px; text-align: left; mso-line-height-alt: 24px;">
